# advent-of-code-2020-cpp

./: CMakeLists.txt  readme.md
.github/workflows/: cmake.yml
day01/: twentytwenty.cpp
day04/: passport-processing.cpp
day05/: tokenize.hpp
day06/: custom-customs.cpp
day07/: handy-haversacks.cpp
day08/: handheld-halting.cpp  handheld.hpp
day09/: encoding-error.cpp
day10/: adapter-array.cpp
day11/: expect  seating-system.cpp
day12/: rain-risk.cpp
day13/: expect  shuttle-search.cpp
day14/: docking-data.cpp  expect
day15/: expect  rambunctious-recitation.cpp
day16/: expect  ticket-translation.cpp
day17/: conway-cubes.cpp  expect
day18/: operation-order.cpp
day19/: expect  monster-messages.cpp
day2/: password-philosophy.cpp
day20/: expect  jurassic-jigsaw.cpp
day21/: allergen-assessment.cpp  expect
day22/: crab-combat.cpp  expect  input
day23/: crab-cups.cpp  expect
day24/: expect  lobby-layout.cpp
day25/: combo-breaker.cpp  expect
day3/: toboggan-trajectory.cpp
day5/: arg_input.hpp  binary-boarding.cpp  tokenize.hpp
day6/: custom-customs.cpp
day7/: handy-haversacks.cpp
day8/: handheld-halting.cpp
day9/: encoding-error.cpp
