cmake_minimum_required(VERSION 3.17)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 20)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_executable(day01-twentytwenty day01/twentytwenty.cpp)
add_executable(day02-password-philosophy day02/password-philosophy.cpp)
add_executable(day03-toboggan-trajectory day03/toboggan-trajectory.cpp)
add_executable(day04-passport-processing day04/passport-processing.cpp)
add_executable(day05-binary-boarding day05/binary-boarding.cpp)
add_executable(day06-custom-customs day06/custom-customs.cpp)
add_executable(day07-handy-haversacks day07/handy-haversacks.cpp)
add_executable(day08-handheld-halting day08/handheld-halting.cpp)
add_executable(day09-encoding-error day09/encoding-error.cpp)
add_executable(day10-adapter-array day10/adapter-array.cpp)
add_executable(day11-seating-system day11/seating-system.cpp)
add_executable(day12-rain-risk day12/rain-risk.cpp)
add_executable(day13-shuttle-search day13/shuttle-search.cpp)
add_executable(day14-docking-data day14/docking-data.cpp)
add_executable(day15-rambunctious-recitation day15/rambunctious-recitation.cpp)
add_executable(day16-ticket-translation day16/ticket-translation.cpp)